--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body> 
     <header>OPA APERTA O PLAY NEYMAR</header>
+    <section>
+          <div class="texto-video1">
+    <h1>NEY PARADOIA</h1>
+    <P>fazer parodias de skils do neymar com musicas</P>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/_vVHr9u_WVQ?si=9wF9JqcVwmNhcR0W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
     
