--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hyagoDO777</title>
 </head>
-<body> 
+
+<body>
     <header>OPA APERTA O PLAY NEYMAR</header>
     <section>
-          <div class="texto-video1">
-    <h1>NEY PARADOIA</h1>
-    <P>fazer parodias de skils do neymar com musicas</P>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/_vVHr9u_WVQ?si=9wF9JqcVwmNhcR0W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    
-    
+        <div class="texto-video1">
+            <h1>NEY PARADOIA</h1>
+            <P>fazer parodias de skils do neymar com musicas</P>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/_vVHr9u_WVQ?si=9wF9JqcVwmNhcR0W"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+    <section>
+        <h2> melhores skils do NEYMAR </h2>
+        <div class="categotia videos">
+            <a href="https://www.youtube.com/watch?v=KNcZiDXQ69M">
+                <img src="https://img.youtube.com/vi/KNcZiDXQ69M/maxresdefault.jpg" />
+                <a href="https://www.youtube.com/watch?v=XsIP9Crq-0Q" <img
+                    scr="https://img.youtube.com/vi/XsIP9Crq-0Q/maxresdefault.jpg" </div>
+                    <section>
 </body>
+
 </html>
