--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
         <div class="categotia videos">
             <a href="https://www.youtube.com/watch?v=KNcZiDXQ69M">
                 <img src="https://img.youtube.com/vi/KNcZiDXQ69M/maxresdefault.jpg" />
-                <a href="https://www.youtube.com/watch?v=XsIP9Crq-0Q" <img
-                    scr="https://img.youtube.com/vi/XsIP9Crq-0Q/maxresdefault.jpg" </div>
-                    <section>
+            </a>
+            <a href="https://www.youtube.com/watch?v=XsIP9Crq-0Q">
+                <img scr="https://img.youtube.com/vi/XsIP9Crq-0Q/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=ymg3a2Q4r7c">
+                <img src="https://img.youtube.com/vi/ymg3a2Q4r7c/maxresdefault.jpg" />
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=bqhL0m8sElQ">
+                <img src="https://img.youtube.com/vi/bqhL0m8sElQ/maxresdefault.jpg" />
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
